using System;
using System.Collections.Generic;

namespace SnapLink_Repository.Entity;

public partial class Booking
{
    public int BookingId { get; set; }

    public int UserId { get; set; }

    public int PhotographerId { get; set; }

    public int LocationId { get; set; }

    public DateTime? StartDatetime { get; set; }

    public DateTime? EndDatetime { get; set; }

    public string? Status { get; set; }

    public string? SpecialRequests { get; set; }

    public decimal? TotalPrice { get; set; }

    public DateTime? CreatedAt { get; set; }

    public DateTime? UpdatedAt { get; set; }

    public virtual ICollection<Complaint> Complaints { get; set; } = new List<Complaint>();

    public virtual Photographer Photographer { get; set; } = null!;

    public virtual ICollection<Review> Reviews { get; set; } = new List<Review>();

    public virtual User User { get; set; } = null!;

    public virtual Location? Location { get; set; }

    public virtual Payment? Payment { get; set; }

    // Photo delivery relationship
    public virtual PhotoDelivery? PhotoDelivery { get; set; }
    
    // Event booking relationship
    public virtual EventBooking? EventBooking { get; set; }
    public virtual ICollection<Rating> Ratings { get; set; } = new List<Rating>();
}
