using System;
using System.Collections.Generic;

namespace SnapLink_Repository.Entity;

public partial class Location
{
    public int LocationId { get; set; }

    public int LocationOwnerId { get; set; }

    public string? Name { get; set; }

    public string? Address { get; set; }

    public string? Description { get; set; }

    public string? Amenities { get; set; }

    public decimal? HourlyRate { get; set; }

    public int? Capacity { get; set; }

    public bool? Indoor { get; set; }

    public bool? Outdoor { get; set; }

    public string? AvailabilityStatus { get; set; }

    public bool? FeaturedStatus { get; set; }

    public string? VerificationStatus { get; set; }

    public string? LocationType { get; set; } // "Registered" or "External" (Google Places)

    public string? ExternalPlaceId { get; set; } // Google Places ID for external locations

    public DateTime? CreatedAt { get; set; }

    public DateTime? UpdatedAt { get; set; }
    public double? Latitude { get; set; }
    public double? Longitude { get; set; }

    public virtual ICollection<Advertisement> Advertisements { get; set; } = new List<Advertisement>();

    public virtual ICollection<Booking> Bookings { get; set; } = new List<Booking>();

    public virtual LocationOwner LocationOwner { get; set; } = null!;
    
    public virtual ICollection<Image> Images { get; set; } = new List<Image>();
    
    public virtual ICollection<LocationEvent> LocationEvents { get; set; } = new List<LocationEvent>();
    public virtual ICollection<Rating> Ratings { get; set; } = new List<Rating>();
    public virtual ICollection<PremiumSubscription> PremiumSubscriptions { get; set; }
    = new List<PremiumSubscription>();
}
