using System;
using System.Collections.Generic;

namespace SnapLink_Repository.Entity;

public partial class PremiumSubscription
{
    public int PremiumSubscriptionId { get; set; }

    public int UserId { get; set; }

    public int PackageId { get; set; }

    public DateTime? StartDate { get; set; }

    public DateTime? EndDate { get; set; }

    public string? Status { get; set; }

    public int? PaymentId { get; set; }
    public int? PhotographerId { get; set; }
    public int? LocationId { get; set; }


    public virtual PremiumPackage Package { get; set; } = null!;

    public virtual Payment? Payment { get; set; }

    public virtual User User { get; set; } = null!;
    public virtual Photographer? Photographer { get; set; }
    public virtual Location? Location { get; set; }
}
