using System;
using System.Collections.Generic;

namespace SnapLink_Repository.Entity;

public partial class Review
{
    public int ReviewId { get; set; }

    public int BookingId { get; set; }

    public int ReviewerId { get; set; }

    public string? RevieweeType { get; set; }

    public int RevieweeId { get; set; }

    public int Rating { get; set; }

    public string? Comment { get; set; }

    public DateTime? CreatedAt { get; set; }

    public DateTime? UpdatedAt { get; set; }

    public virtual Booking Booking { get; set; } = null!;
}
