using System;
using System.Collections.Generic;

namespace SnapLink_Repository.Entity;

public partial class UserRole
{
    public int UserRoleId { get; set; }

    public int? UserId { get; set; }

    public int? RoleId { get; set; }

    public DateTime? AssignedAt { get; set; }

    public virtual Role? Role { get; set; }

    public virtual User? User { get; set; }
}
